fix: remove overflow property from body to improve layout behavior

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -64,7 +64,6 @@ body {
     font-family: 'RedHatDisplay', sans-serif;
     margin: 0;
     padding: 0;
-    overflow: hidden;
 }
 
 main {
